added fix for .env configuration file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true,
+    "typeRoots": ["./src/types"],
     "paths": {
       "@models": ["./src/models"],
       "@components": ["./src/components/"],
